# hubble_contours

./: README.md  README.rst  hubble_contours.py  setup.cfg  setup.py  to-do-list.md  tox.ini
docs/hubble_contours/: index.rst
docs/notebooks/: SDSS-cross-match-with-mag-and-z
hubble_contours/: __init__.py  hubble_contours.py
hubble_contours/Contour-Images/166.4841156_3.211986065/: j8zb13010_drz.fits
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst  LICENSE  MANIFEST.in
tutorial/: Basic_Example.ipynb  Basic_Usage.ipynb  index.rst
tutorial/readthedocsfiles/: conf.py
