[metadata]
name = hubble_contours
author = Lindsey Gordon
author_email = lgordon6@wellesley.edu
license = Other
license_file = licenses/LICENSE.rst
url = https://github.com/lcgordon/hubble_contours
description = Produces contour plots from Hubble drizzle reduced files
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = lcgordon/hubble_contours

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    pandas
    astroquery
    os


[options.extras_require]
all =
    scipy
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
hubble_contours = data/*

[tool:pytest]
testpaths = "hubble_contours" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    hubble_contours/_astropy_init*
    hubble_contours/conftest.py
    hubble_contours/*setup_package*
    hubble_contours/tests/*
    hubble_contours/*/tests/*
    hubble_contours/extern/*
    hubble_contours/version*
    */hubble_contours/_astropy_init*
    */hubble_contours/conftest.py
    */hubble_contours/*setup_package*
    */hubble_contours/tests/*
    */hubble_contours/*/tests/*
    */hubble_contours/extern/*
    */hubble_contours/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
